# dapp-ghost-com

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
contracts/: Cargo.toml
contracts/io/: Cargo.toml
contracts/io/src/: lib.rs
contracts/src/: lib.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  providers.tsx  utils.ts
frontend/src/components/footer/: consts.ts
frontend/src/context/: PeerConnection.tsx
frontend/src/features/chat/: createPeerConnection.ts  hooks.ts  index.ts  store.ts
frontend/src/features/chat/assets/meta/: ghost_com.meta.txt
frontend/src/features/chat/components/: index.ts
frontend/src/features/chat/components/chat/: Chat.tsx  ChatMessage.tsx  chat.module.scss
frontend/src/features/chat/components/host/: Host.tsx  index.ts
frontend/src/features/chat/components/select/: HostOrSlave.module.scss  HostOrSlave.tsx  index.ts
frontend/src/features/chat/components/slave/: Slave.tsx  index.ts
frontend/src/features/chat/module/ChatMessages/: ChatMessages.tsx
frontend/src/features/chat/module/useChat/: useChat.ts
frontend/src/features/chat/util/: connectionDescriptionEncoding.ts  encryption.ts
frontend/src/hooks/: api.ts  generate-rsa-key.ts  use-is-app-ready.ts  use-watch-messages.ts
frontend/src/pages/: index.tsx
frontend/src/pages/chat/: chat.tsx  hanldeEvents.tsx
frontend/src/pages/home/: home.module.scss  home.tsx
src/: lib.rs
