[workspace]
members = ["cli", "io"]

[package]
name = "ghost-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = "1.1.1"
io = { path = "io" }

[dev-dependencies]
gtest = "1.1.1"

[build-dependencies]
gear-wasm-builder = "1.1.1"
io = { path = "io" }
