[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = "1.1.1"
gmeta = "1.1.1"
parity-scale-codec = { version = "3.6.9", default-features = false }
scale-info = { version = "2.10.0", default-features = false }
